updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello I'm Tori! I'm an aspiring software developer...</p>
       <h1>Where I'm From</h1>
       <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
+      <h1>I enjoy playing basketball, guitar, and video games ?</h1>
       <p>Details here...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A.I. Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Newport Beach, CA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I find it fun, exciting, and very useful.</p>
     </section>
 
     <footer id="footer">
