--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <h1>Introduction</h1>
       <p>Hello I'm Tori! I'm an aspiring software developer...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
-      <h1>I enjoy playing basketball, guitar, and video games ?</h1>
-      <p>Details here...</p>
+      <p>Midway City, CA.</p>
+      <h1>My Hobbies?</h1>
+      <p> I enjoy playing basketball, guitar, and video games</p>
       <h1>What's your dream job?</h1>
       <p>A.I. Developer</p>
       <h1>Where do you live?</h1>
